all-besides-footer-div

--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
         </a>
     </li>
     
-    <li>
+    <li >
         <a href="" class="customers-social-list-link">
             <svg class="customers-social-list-icon" width="106" height="60">
                 <use href="./images/sprite.svg#icon-client-2"></use>
@@ -372,6 +372,7 @@
 
 
     <footer class="footer">
+    <div class="footer-divs">
         <div class="container">
             <a href="WebStudio" class="footer-web-white"><span style="color: #2196F3">Web</span>Studio</a>
             <address class="footer-address">
@@ -391,7 +392,7 @@
         </div>
 
         
-        <div class=" footer-social">
+        <div class=" footer-social ">
             <p class="footer-social-p">приєднуйтесь</p>
             <ul class="work-social-list">
                 <li class="work-social-list-item">
@@ -430,7 +431,7 @@
                 </li>
             </ul>
         </div>
-
+    </div>
     </footer>
 </body>
 </html>
